feat: add checkout preview session
